change some small features

--- a/public/admin/adminSignup.html
+++ b/public/admin/adminSignup.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="loginstyle.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <script src="index1.js" defer></script>
+    <script src="index.js" defer></script>
     <title>Document</title>
 </head>
 
-<body style="background-image: url(img/backgroundAdmin.jpeg);">
+<body style="background-image: url(../img/backgroundAdmin.jpeg);">
 
     <form class="border-aqua bg-white">
 
@@ -48,6 +48,12 @@
             <input id="description"class="textInput" type="text" placeholder="Description...">
         </div>
 
+        <div class="inputContainer">
+            <label>Address</label>
+            <br>
+            <input id="address"class="textInput" type="text" placeholder="Address...">
+        </div>
+
 
         <div class="inputContainer">
             <label>City</label>
@@ -82,7 +88,7 @@
 
         <div class="text-center">
             <div class="buttonContainer">
-                <button id="signupButton" style="background-image: url(img/backgroundAdmin3.png);">Add</button>
+                <button id="signupButton" style="background-image: url(../img/backgroundAdmin3.png);">Add</button>
             </div>
         </div>
 
