--- a/public/user/index.html
+++ b/public/user/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <script src="index.js" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -23,7 +23,7 @@
                 <button class="button-48"> <a class="button1 navItems" style="color: white; font-weight: bold;" href="#" data-scroll="navBar">Home</a></button>
                 <button class="button-48"> <a class="button1 navItems" style="color: white; font-weight: bold;"href="#" data-scroll="destinationChoose">Destination</a></button>
                 <button class="button-48"> <a class="button1 navItems" style="color: white; font-weight: bold;"href="#" data-scroll="popularHotel">Hotel</a></button>
-                <button id="toLoginPage" class="button-48"> <a class="button1" style="color: white; font-weight: bold;"href="./user/login.html">Log in</a></button>
+                <button id="toLoginPage" class="button-48"> <a class="button1" style="color: white; font-weight: bold;"href="login.html">Log in</a></button>
             </div>
         </nav>
         <form class="searchDiv" onsubmit="getRooms()">
@@ -41,11 +41,11 @@
             LET'S CHOOSE YOUR DESTINATION
         </div>
         <div class="destinationChoose">
-            <button class="title3 destinationImg1" style="background-image: url('img/vancouver.png');"> <a class="button2" href="destinationUI/vancouver.html">VANCOUVER</a></button>
-            <button class="title3 destinationImg1"style="background-image: url('img/montreal.png');"> <a class="button2" href="destinationUI/montreal.html">MONTREAL</a></button>
-            <button class="title3 destinationImg1"style="background-image: url('img/toronto.png');"> <a class="button2" href="destinationUI/toronto.html">TORONTO</a></button>
-            <button class="title3 destinationImg1"style="background-image: url('img/winnipeg.png');"> <a class="button2" href="destinationUI/winnipeg.html">WINNIPEG</a></button>
-            <button class="title3 destinationImg1"style="background-image: url('img/ottawa.png');"> <a class="button2" href="destinationUI/ottawa.html">OTTAWA</a></button>
+            <button class="title3 destinationImg1" style="background-image: url('../img/vancouver.png');"> <a class="button2" href="../destinationUI/vancouver.html">VANCOUVER</a></button>
+            <button class="title3 destinationImg1"style="background-image: url('../img/montreal.png');"> <a class="button2" href="../destinationUI/montreal.html">MONTREAL</a></button>
+            <button class="title3 destinationImg1"style="background-image: url('../img/toronto.png');"> <a class="button2" href="../destinationUI/toronto.html">TORONTO</a></button>
+            <button class="title3 destinationImg1"style="background-image: url('../img/winnipeg.png');"> <a class="button2" href="../destinationUI/winnipeg.html">WINNIPEG</a></button>
+            <button class="title3 destinationImg1"style="background-image: url('../img/ottawa.png');"> <a class="button2" href="../destinationUI/ottawa.html">OTTAWA</a></button>
         </div>
         <div style="display:grid; justify-content:center; grid-template-columns: 75%;align-items: center;">
             <div class="grayLine" style="margin: bottom 70px ;">
