add hotel-mainpage.html and js files

--- a/public/admin/hotels/createRoom.html
+++ b/public/admin/hotels/createRoom.html
@@ -10,7 +10,7 @@
     <title>Document</title>
 </head>
 
-<body style="background-image: url(img/backgroundHotel.jpeg);">
+<body style="background-image: url(../../img/backgroundHotel.jpeg);">
 
     <form class="border-aqua bg-white">
 
