--- a/public/user/index.html
+++ b/public/user/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="../style.css">
     <script src="index.js" defer></script>
+    <script src="hotel-mainpage.js" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
