complete the base of hotel main page html file and js file

--- a/public/destinationUI/ottawa.html
+++ b/public/destinationUI/ottawa.html
@@ -27,7 +27,7 @@
             </div>
         </nav>
         <form class="searchDiv">
-            <div class="title2 searchMar"> FIND YOUR HOTELS IN VANCOUVER</div>
+            <div class="title2 searchMar"> FIND YOUR HOTELS IN OTTAWA</div>
             <input class="searchBar searchMar"type="text" placeholder="No. Travelers">
             <div class="searchMar2">
                 <input class="searchBar searchMar" onfocus="(this.type = 'date')" onblur="(this.type = 'text')" placeholder="From:">
