--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
                 <button class="button-48"> <a class="button1 navItems" style="color: white; font-weight: bold;" href="#" data-scroll="navBar">Home</a></button>
                 <button class="button-48"> <a class="button1 navItems" style="color: white; font-weight: bold;"href="#" data-scroll="destinationChoose">Destination</a></button>
                 <button class="button-48"> <a class="button1 navItems" style="color: white; font-weight: bold;"href="#" data-scroll="popularHotel">Hotel</a></button>
+                <button id="toLoginPage" class="button-48"> <a class="button1" style="color: white; font-weight: bold;"href="./admin/adminLogin.html">Admin</a></button>
                 <button id="toLoginPage" class="button-48"> <a class="button1" style="color: white; font-weight: bold;"href="./user/login.html">Log in</a></button>
             </div>
         </nav>
