--- a/public/destinationUI/montreal.html
+++ b/public/destinationUI/montreal.html
@@ -18,7 +18,7 @@
                 <span class="bar"></span>
                 <span class="bar"></span>
             </a>
-            <div id="greeting" class="title" style="color: white; margin-left: 30px"> HELLO, </div>
+            <div id="greeting" class="title" style="color: white; margin-left: 30px"> HELLO </div>
             <div class="selection" id="selection">
                 <button class="button-48"> <a class="button1" style="color: white; font-weight: bold;" href="#">Home</a></button>
                 <button class="button-48"> <a class="button1" style="color: white; font-weight: bold;"href="#">Destination</a></button>
