complete hotel-search-page.html and js files

--- a/public/admin/adminSignup.html
+++ b/public/admin/adminSignup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="loginstyle.css">
+    <link rel="stylesheet" href="../user/loginstyle.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <script src="index.js" defer></script>
     <title>Document</title>
@@ -98,10 +98,11 @@
             <span>Forgot your password? <a id = "forgotPassword" href="#">Click Here</a></span>
         </div> -->
 
-        <div class="gradient">
-
+        <div class="text-center">
+            <p id="paragraphFooter">
+                You're already a member? <a id="signupAccount" href="adminLogin.html">Login  here</a>
+            </p>
         </div>
-
         
 
     </form>
