--- a/public/user/hotel-mainpage.html
+++ b/public/user/hotel-mainpage.html
@@ -20,10 +20,9 @@
             </a>
             <div id="hotel-name" class="title" style="color: rgb(97, 97, 98); margin-left: 30px; width: 500px"></div>
             <div class="selection" id="selection">
-                <button class="button-48"> <a class="button1 navItems" style="color: white; font-weight: bold;" href="#" data-scroll="navBar">Home</a></button>
-                <button class="button-48"> <a class="button1 navItems" style="color: white; font-weight: bold;"href="#" data-scroll="hotelDescription-container">Destination</a></button>
+                <button class="button-48"> <a class="button1 navItems" style="color: white; font-weight: bold;" href="index.html">Home</a></button>
                 <button class="button-48"> <a class="button1 navItems" style="color: white; font-weight: bold;"href="#" data-scroll="popularHotel">Hotel</a></button>
-                <button id="toLoginPage" class="button-48"> <a class="button1" style="color: white; font-weight: bold;" onclick="signout()">Log out</a></button>
+                <button id="toLoginPage" class="button-48"> <a class="button1" style="color: white; font-weight: bold;" href="login.html" onclick="signout()">Log out</a></button>
             </div>
         </nav>
         <form class="searchDiv" onsubmit="getRooms()">
