--- a/public/admin/adminLogin.html
+++ b/public/admin/adminLogin.html
@@ -46,11 +46,11 @@
         <!-- <div class="text-center">
             <span>Forgot your password? <a id = "forgotPassword" href="#">Click Here</a></span>
         </div> -->
-
-        <div class="gradient">
-
+        <div class="text-center">
+            <p id="paragraphFooter">
+                Don't have an account? <a id="signupAccount" href="adminSignup.html">Sign Up here</a>
+            </p>
         </div>
-
         
 
     </form>
