--- a/public/admin/indexAdmin.html
+++ b/public/admin/indexAdmin.html
@@ -4,15 +4,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <script src="indexAdmin.js" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 <body>
-    <div class="imageBackground" style="background-image: url(img/backgroundAdmin.jpeg);">
+    <div class="imageBackground" style="background-image: url(../img/backgroundAdmin.jpeg);">
         
-        <nav id="navBar" style="background-image: url(img/backgroundAdmin2.jpeg);">
+        <nav id="navBar" style="background-image: url(../img/backgroundAdmin2.jpeg);">
             <a href="#" class="toggle-button">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -23,7 +23,7 @@
                 <button class="button-48"> <a class="button1" style="color: white; font-weight: bold;" href="#">Home</a></button>
                 <button class="button-48"> <a class="button1" style="color: white; font-weight: bold;"href="#">Create Hotel</a></button>
                 <button class="button-48"> <a class="button1" style="color: white; font-weight: bold;"href="#">Delete Hotel</a></button>
-                <button id="toLoginPage" class="button-48"> <a class="button1" style="color: white; font-weight: bold;"href="./user/login.html">Log in</a></button>
+                <button id="toLoginPage" class="button-48"> <a class="button1" style="color: white; font-weight: bold;"href="adminLogin.html">Log out</a></button>
             </div>
         </nav>
         <form class="searchDiv" onsubmit="getRooms()">
