--- a/public/destinationUI/vancouver.html
+++ b/public/destinationUI/vancouver.html
@@ -20,7 +20,7 @@
             </a>
             <div id="greeting" class="title" style="color: white; margin-left: 30px"> HELLO, </div>
             <div class="selection" id="selection">
-                <button class="button-48"> <a class="button1" style="color: white; font-weight: bold;" href="#">Home</a></button>
+                <button class="button-48"> <a class="button1" style="color: white; font-weight: bold;" href="../user/index.html">Home</a></button>
                 <button class="button-48"> <a class="button1" style="color: white; font-weight: bold;"href="#">Destination</a></button>
                 <button class="button-48"> <a class="button1" style="color: white; font-weight: bold;"href="#">Hotel</a></button>
                 <button id="toLoginPage" class="button-48"> <a class="button1" style="color: white; font-weight: bold;"href="./user/login.html">Log in</a></button>
