change the display of the date type

--- a/public/user/index.html
+++ b/public/user/index.html
@@ -29,7 +29,7 @@
         <form class="searchDiv" onsubmit="getRooms(event)">
             <div class="title2 searchMar"> FIND YOUR HOTELS</div>
             <input id="destination" required class="searchBar searchMar"type="text" placeholder="Destination">
-            <input id="numberOfTravelers" required class="searchBar searchMar"type="text" placeholder="No. Travelers">
+            <input id="numberOfTravelers" required class="searchBar searchMar"type="number" placeholder="No. Travelers">
             <div class="searchMar2">
                 <input id="startDate" required class="searchBar searchMar" onfocus="(this.type = 'date')" onblur="(this.type = 'text')" placeholder="From:">
                 <input id="endDate" required class="searchBar searchMar"onfocus="(this.type = 'date')" onblur="(this.type = 'text')" placeholder="To:">
