--- a/public/index.html
+++ b/public/index.html
@@ -27,13 +27,13 @@
                 <button id="toLoginPage" class="button-48"> <a class="button1" style="color: white; font-weight: bold;"href="./user/login.html">Log in</a></button>
             </div>
         </nav>
-        <form class="searchDiv" onsubmit="getRooms()">
+        <form class="searchDiv" onsubmit="alertToLogin(event)">
             <div class="title2 searchMar"> FIND YOUR HOTELS</div>
-            <input id="destination" required class="searchBar searchMar"type="text" placeholder="Destination">
-            <input id="numberOfTravelers" required class="searchBar searchMar"type="text" placeholder="No. Travelers">
+            <input id="destination"  class="searchBar searchMar"type="text" placeholder="Destination">
+            <input id="numberOfTravelers"  class="searchBar searchMar"type="text" placeholder="No. Travelers">
             <div class="searchMar2">
-                <input id="startDate" required class="searchBar searchMar" onfocus="(this.type = 'date')" onblur="(this.type = 'text')" placeholder="From:">
-                <input id="endDate" required class="searchBar searchMar"onfocus="(this.type = 'date')" onblur="(this.type = 'text')" placeholder="To:">
+                <input id="startDate"  class="searchBar searchMar" onfocus="(this.type = 'date')" onblur="(this.type = 'text')" placeholder="From:">
+                <input id="endDate"  class="searchBar searchMar"onfocus="(this.type = 'date')" onblur="(this.type = 'text')" placeholder="To:">
             </div>
             <button id="searchHotelButton" class="title3 searchButton">SEARCH</button>
             </div>
