Finished Admin Homepage HTML

--- a/public/admin/admin.html
+++ b/public/admin/admin.html
@@ -10,7 +10,7 @@
     <title>Document</title>
 </head>
 
-<body style="background-image: url(img/backgroundAdmin.jpeg);">
+<body style="background-image: url(imgAdmin/backgroundAdmin.jpeg);">
 
     <form class="border-aqua bg-white">
 
@@ -82,7 +82,7 @@
 
         <div class="text-center">
             <div class="buttonContainer">
-                <button id="signupButton" style="background-image: url(img/backgroundAdmin3.png);">Add</button>
+                <button id="signupButton" style="background-image: url(imgAdmin/backgroundAdmin3.png);">Add</button>
             </div>
         </div>
 
