--- a/public/admin/hotel.html
+++ b/public/admin/hotel.html
@@ -10,7 +10,7 @@
     <title>Document</title>
 </head>
 
-<body style="background-image: url(img/backgroundHotel.jpeg);">
+<body style="background-image: url(imgAdmin/backgroundHotel.jpeg);">
 
     <form class="border-aqua bg-white">
 
@@ -65,7 +65,7 @@
 
         <div class="text-center">
             <div class="buttonContainer">
-                <button id="signupButton" style="background-image: url(img/backgroundHotel2.jpeg);">Add</button>
+                <button id="signupButton" style="background-image: url(imgAdmin/backgroundHotel2.jpeg);">Add</button>
             </div>
         </div>
 
