fixed admin.js and more

--- a/public/admin/adminLogin.html
+++ b/public/admin/adminLogin.html
@@ -12,10 +12,14 @@
 
 <body style="background-image: url(../img/backgroundAdmin.jpeg);">
 
-    <form class="border-aqua bg-white">
+    <form class="border-aqua bg-white"onsubmit="loginFormSubmit(event)">
 
         <div class="text-center">
             <h1>Admin Sign In</h1>
+        </div>
+
+        <div id="notification">
+
         </div>
 
 
