temporary changes to hotel.js

--- a/public/admin/hotels/createRoom.html
+++ b/public/admin/hotels/createRoom.html
@@ -62,7 +62,7 @@
         </div>
 
         <div class="inputContainer">
-            <input required id="breakfast"class="textInput" style="width: auto;"type="checkbox" placeholder="Beds...">
+            <input id="breakfast"class="textInput" style="width: auto;"type="checkbox" placeholder="Beds...">
             <label for="breakfast">Is breakfast included? </label>
         </div>
  
