fix update room

--- a/public/admin/hotels/updateRoom.html
+++ b/public/admin/hotels/updateRoom.html
@@ -25,14 +25,14 @@
         <div class="inputContainer">
             <label>Number of Beds</label>
             <br>
-            <input required id="beds"class="textInput" type="number" placeholder="Beds...">
+            <input id="beds"class="textInput" type="number" placeholder="Beds...">
         </div>
 
 
         <div class="inputContainer">
             <label>Price</label>
             <br>
-            <input required id="price"class="textInput" type="number" placeholder="Price...">
+            <input  id="price"class="textInput" type="number" placeholder="Price...">
         </div>
 
 
@@ -45,13 +45,13 @@
         <div class="inputContainer">
             <label>Start Date</label>
             <br>
-            <input required id="start"class="textInput" type="textInput" placeholder="Start Date...">
+            <input  id="start"class="textInput" type="textInput" placeholder="Start Date...">
         </div>
 
         <div class="inputContainer">
             <label>End Date</label>
             <br>
-            <input required id="end"class="textInput" type="textInput" placeholder="End Date...">
+            <input  id="end"class="textInput" type="textInput" placeholder="End Date...">
         </div>
 
 
@@ -62,8 +62,11 @@
         </div>
 
         <div class="inputContainer">
-            <input id="breakfast"class="textInput" style="width: auto;"type="checkbox" placeholder="Beds...">
-            <label for="breakfast">Is breakfast included? </label>
+            <!-- <input id="breakfast"class="textInput" style="width: auto;"type="checkbox" placeholder="Beds...">
+            <label for="breakfast">Is breakfast included? </label> -->
+            <label>Is breakfast included? (true or false)</label>
+            <br>
+            <input id="breakfast"class="textInput" type="textInput" placeholder="True or false...">
         </div>
  
 
