last commit, finishing touches

--- a/public/admin/adminLogin.html
+++ b/public/admin/adminLogin.html
@@ -10,7 +10,7 @@
     <title>Document</title>
 </head>
 
-<body style="background-image: url(../img/backgroundAdmin.jpeg);">
+<body style="background-image: url(../img/backgroundAdmin.jpeg); ">
 
     <form class="border-aqua bg-white"onsubmit="loginFormSubmit(event)">
 
@@ -33,7 +33,7 @@
         <div class="inputContainer">
             <label>Password</label>
             <br>
-            <input required id="password"class="textInput" type="textInput" placeholder="Password...">
+            <input required id="password"class="textInput" type="password" placeholder="Password...">
         </div>
 
 
