--- a/public/admin/indexAdmin.html
+++ b/public/admin/indexAdmin.html
@@ -24,7 +24,6 @@
             <div class="selection" id="selection">
                 <button class="button-48"> <a class="button1" style="color: white; font-weight: bold;" href="#">Home</a></button>
                 <button class="button-48"> <a class="button1" style="color: white; font-weight: bold;"href="hotels/createRoom.html">Create Hotel</a></button>
-                <button class="button-48"> <a class="button1" style="color: white; font-weight: bold;"href="#">Delete Hotel</a></button>
                 <button id="toLoginPage" class="button-48"> <a class="button1" style="color: white; font-weight: bold;"href="adminLogin.html">Log in</a></button>
             </div>
         </nav>
@@ -33,16 +32,13 @@
             </div>
             </div>
         </form>
-        <!-- <div class="title" style="text-align: center;">
-            LET'S CHOOSE YOUR DESTINATION
+        <div  class="title" style="text-align: center;">
+            Description
+            <div id="description">
+
+            </div>
         </div>
-        <div class="destinationChoose">
-            <button class="title3 destinationImg1" style="background-image: url('img/vancouver.png');"> <a class="button2" href="destinationUI/vancouver.html">VANCOUVER</a></button>
-            <button class="title3 destinationImg1"style="background-image: url('img/montreal.png');"> <a class="button2" href="destinationUI/montreal.html">MONTREAL</a></button>
-            <button class="title3 destinationImg1"style="background-image: url('img/toronto.png');"> <a class="button2" href="destinationUI/toronto.html">TORONTO</a></button>
-            <button class="title3 destinationImg1"style="background-image: url('img/winnipeg.png');"> <a class="button2" href="destinationUI/winnipeg.html">WINNIPEG</a></button>
-            <button class="title3 destinationImg1"style="background-image: url('img/ottawa.png');"> <a class="button2" href="destinationUI/ottawa.html">OTTAWA</a></button>
-        </div> -->
+       
         <div style="display:grid; justify-content:center; grid-template-columns: 75%;align-items: center;">
             <div class="grayLine" style="margin: bottom 50px ; margin-top: 50px;">
             </div>
